--- a/7.multi_level_user/assets/css/sb-admin-2.css
+++ b/7.multi_level_user/assets/css/sb-admin-2.css
@@ -2261,12 +2261,12 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #2e59d9;
+  background-color: #0aeb8d;
   border-color: #2653d4;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(179, 198, 255, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
@@ -2289,13 +2289,13 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #858796;
-  border-color: #858796;
+  background-color: #1427b9;
+  border-color: #ffffff;
 }
 
 .btn-secondary:hover {
   color: #fff;
-  background-color: #717384;
+  background-color: #08105a;
   border-color: #6b6d7d;
 }
 
@@ -2323,18 +2323,18 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #1cc88a;
-  border-color: #1cc88a;
+  background-color: #52aa18;
+  border-color: #54c029;
 }
 
 .btn-success:hover {
   color: #fff;
-  background-color: #17a673;
+  background-color: #17ac30;
   border-color: #169b6b;
 }
 
 .btn-success:focus, .btn-success.focus {
-  box-shadow: 0 0 0 0.2rem rgba(62, 208, 156, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(74, 202, 41, 0.5);
 }
 
 .btn-success.disabled, .btn-success:disabled {
